assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Quicksand&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

h1 {
    color: #540b0e;
    font-family: 'Quicksand', sans-serif;
    font-weight: 400;
}

h2 {
    color: #9e2a2b;
}

body {
    background-color: #fff3b0;
    position: relative;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    margin: 2% 2%;
}

main {
    flex: 1 0 auto;
}

nav {
    padding: 8px;
    font-family: 'Quicksand', sans-serif;
    
}

.readers {
    color: black;
    font-family: 'Quicksand', sans-serif;
    font-weight: 500;
}

header, footer {
    background-color: #fcc168;
    width: 100%;
    
}

header {
    position: fixed;
}

footer {
    width: fit-content;
    height: auto;
}

footer li {
    list-style-type: none;
    font-family: 'Quicksand', sans-serif;
    font-weight: 500;
    
    h3 {
    color: #540b0e;
    }
}

